traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:19: error: not found: value ecrireMessage
    ecrireMessage(compteur)
    ^TraversalByColumn:19: error: not found: value compteur
    ecrireMessage(compteur)
                  ^TraversalByColumn:20: error: not found: value compteur
    compteur = compteur + 1
    ^TraversalByColumn:23: error: not found: value i
      case _ => setPos(i+1,j+1)    
                       ^TraversalByColumn:23: error: not found: value j
      case _ => setPos(i+1,j+1)    
                           ^TraversalByColumn:26: error: not found: value ecrireMessage
  ecrireMessage(48)
  ^